--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment-Web- Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <section class="top-banner">
-        <div class="first-section">
-            <h1><span class="blue-color">HELLO I'M</span></h1>
-            <h1><span class="salmon-color">MD. OMAR SULTAN</span></h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and 
-                typesetting industry. Lorem Ipsum has been the industry's 
-                standard dummy text ever since the 1500s, when an unknown 
-                printer took a galley of type and scrambled it to make a type 
-                specimen book.</p>
-                <a class="link-button" href="https://www.linkedin.com/in/md-omar-sultan-41155515a/" target="_blank">HIRE ME</a>
-                
-        </div>
-        <div>
-            <img class="img-1" src="image/img-2.png" alt="">
-        </div>
+      <div class="first-section">
+        <h1><span class="blue-color">HELLO I'M</span></h1>
+        <h1><span class="salmon-color">MD. OMAR SULTAN</span></h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
+        <a class="link-button" href="https://www.linkedin.com/in/md-omar-sultan-41155515a/" target="_blank">HIRE ME</a>
+      </div>
+      <div>
+        <img class="img-1" src="image/img-2.png" alt="" />
+      </div>
     </section>
     <section class="second-part">
-        <div>
-            <img class="img-2" src="image/img-1.png" alt="">
-        </div>
-        <div class="second-section">
-            <h2><span class="black-color">About</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis laboriosam obcaecati rerum qui ipsum natus aliquid tempore veniam inventore, cum ducimus explicabo, labore et porro.</p>
-            <a class="link-button" href="https://www.linkedin.com/in/md-omar-sultan-41155515a/" target="_blank"><span class="material-icons">
-                get_app
-                </span>Download CV</a>
-        </div>
+      <div>
+        <img class="img-2" src="image/img-1.png" alt="" />
+      </div>
+      <div class="second-section">
+        <h2><span class="black-color">About</span></h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis laboriosam obcaecati rerum qui ipsum natus aliquid tempore veniam
+          inventore, cum ducimus explicabo, labore et porro.
+        </p>
+        <a class="link-button" href="https://www.linkedin.com/in/md-omar-sultan-41155515a/" target="_blank"
+          ><span class="material-icons"> get_app</span>Download CV</a
+        >
+      </div>
     </section>
-</body>
+  </body>
 </html>
