--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-Web- Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -39,5 +40,38 @@
         >
       </div>
     </section>
+
+    <section>
+    <div class="main">
+        <h1><Span class="main-1">Latest</Span> Working Project</h1>
+    </div>
+    </section>
+    <section class="main-2">
+        <div class="main-3">
+            <div class="a">
+                <img src="image/img-3.png" alt="">
+                <div class="b">
+                    <h3>Power-x-gym (gym website)</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, autem.</p>
+                </div>
+                <div class="a">
+                    <img src="image/img-4.png" alt="">
+                </div>
+                <div class="b">
+                    <h3>Creative Agency</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, sint.</p>
+                </div>
+                <div class="a">
+                    <img src="image/img-5.png" alt="">
+                    <div class="b">
+                        <h3>Hard Rock Music</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
   </body>
 </html>
