--- a/index.html
+++ b/index.html
@@ -46,31 +46,9 @@
         <h1><Span class="main-1">Latest</Span> Working Project</h1>
     </div>
     </section>
-    <section class="main-2">
-        <div class="main-3">
-            <div class="a">
-                <img src="image/img-3.png" alt="">
-                <div class="b">
-                    <h3>Power-x-gym (gym website)</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, autem.</p>
-                </div>
-                <div class="a">
-                    <img src="image/img-4.png" alt="">
-                </div>
-                <div class="b">
-                    <h3>Creative Agency</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, sint.</p>
-                </div>
-                <div class="a">
-                    <img src="image/img-5.png" alt="">
-                    <div class="b">
-                        <h3>Hard Rock Music</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+    <section>
+        <div class="main-2"></div>
     </section>
     
   </body>
