--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     
    <section class="four-part" >
       <div class="WI" id="div-1">
-        <p id="working" class="p-1">WORKING INQUIRY</p>
+        <p id="working">WORKING INQUIRY</p>
       </div>
       <div class="WI" id="div-2">
         <a class="chat-button" href="https://www.linkedin.com/in/md-omar-sultan-41155515a/">Let's Chat</a>
